# engineering

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
concrete/: CMakeLists.txt  concrete.hpp
concrete/tests/: axis_test.cpp
cpp/: CMakeLists.txt
cpp/fundamental/: CMakeLists.txt
cpp/fundamental/unsigned/: math.hpp
cpp/structure/concrete/: CMakeLists.txt
cpp/structure/concrete/tests/: axis_test.cpp
docs/: .gitignore
docs/shared/: shared.tex
docs/structure/concrete/: principle.tex  shared.tex
docs/structure/concrete/9/: main.tex
engineering/: __main__.py
engineering/concrete/: utils.py
engineering/concrete/bending/: main.py  new.py
engineering/concrete/bending/test/: textbook.py
engineering/concrete/diagonal/: main.py
engineering/construction/: chart.py  equivalent_beam.py  network.py  table.py
engineering/construction/test/: all.py  chart.py  charts.py  equivalent_beam.py  table.py
fundamental/: .natvis  CMakeLists.txt  calculus.hpp  math.hpp  number.hpp
fundamental/tests/: math_test.cpp  number_test.cpp
fundamental/unsigned/: math.hpp  number.hpp
structure/: CMakeLists.txt
structure/concrete/: CMakeLists.txt  concrete.hpp
structure/concrete/docs/: .gitignore  principle.tex
structure/concrete/src/: concrete.hpp
structure/concrete/tests/: axis_test.cpp
